force-app/main/default/objects/Bonus_Payouts__c/Bonus_Payouts__c.object-meta.xml
<CustomObject>
    <description>Entry for Bonus Payouts</description>
    <label>Bonus_Payouts</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Bonus Payout ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bonus_Payouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>