force-app/main/default/objects/Bonus_Payouts__c/fields/Bonus__c.field-meta.xml
<CustomField>
    <fullName>Bonus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Required ** Link to Bonus.</description>
    <inlineHelpText>** Required ** Link to Bonus.</inlineHelpText>
    <label>Bonus</label>
    <referenceTo>Bonus__c</referenceTo>
    <relationshipLabel>BonusPayouts</relationshipLabel>
    <relationshipName>Bonus_BonusPayouts</relationshipName>
    <type>Lookup</type>
</CustomField>