force-app/main/default/objects/Bonus_Payouts__c/fields/Payout_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Payout_End_Date__c</fullName>
    <description>The bonus payout end date.</description>
    <inlineHelpText>The bonus payout end date</inlineHelpText>
    <label>Payout End Date</label>
    <type>Date</type>
</CustomField>