force-app/main/default/objects/Bonus_Payouts__c/fields/Payout_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Payout_Start_Date__c</fullName>
    <description>The bonus payout start date.</description>
    <inlineHelpText>The bonus payout start date</inlineHelpText>
    <label>Payout Start Date</label>
    <type>Date</type>
</CustomField>